--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "eslint --ext .ts,vue --ignore-path .gitignore .",
+    "lint-fix": "eslint --ext .ts,vue --ignore-path .gitignore . && prettier --write src/**/*.{ts,vue}"
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -25,11 +26,11 @@
     "@vue/eslint-config-typescript": "^9.1.0",
     "autoprefixer": "^10.4.4",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "postcss": "^8.4.12",
-    "prettier": "^2.4.1",
+    "prettier": "^2.6.1",
     "tailwindcss": "^3.0.23",
     "typescript": "~4.5.5"
   },
