fix:整理&アイコンライブラリインストール

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,9 @@
 	"editor.formatOnSave": true,
 	"[vue]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	// TailwindCSS　常にクラス名候補表示
+	"editor.quickSuggestions": {
+		"strings": true
 	}
 }
