--- a/docker/client/Dockerfile
+++ b/docker/client/Dockerfile
@@ -2,6 +2,6 @@ FROM node:14.17.6
 
 WORKDIR /var/www
 
-RUN apt update -y && \
-    apt upgrade -y && \
+RUN apt-get update -y && \
+    apt-get upgrade -y && \
     npm install -g @vue/cli
