--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^1.0.6",
+    "@tailwindcss/forms": "^0.5.0",
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
