--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/forms": "^0.5.0",
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "gsap": "^3.10.4",
     "lodash": "^4.17.21",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
